# ARWE

./: .gitignore  .gitmodules  .mxproject  ARWE.ioc  CMakeLists.txt  Makefile
Core/Src/: main.c
cube/: .mxproject  ARWE.ioc
cube/Core/Inc/: main.h  stm32f0xx_it.h  tim.h
cube/Core/Src/: gpio.c  main.c  stm32f0xx_it.c  tim.c
src/: main.c
